# steam-game-translator

./: .gitignore  REQUIREMENTS.md  pyproject.toml  start.sh  使用说明.md
src/: main.py
src/cache/: translation_cache.py
src/core/: config.py  hotkey_manager.py  one_click.py  pipeline.py  screenshot.py  window_tracker.py
src/engines/: base.py  detector.py  il2cpp_patcher.py  renpy.py  rpgmaker.py  unity.py
src/ocr/: engine.py
src/overlay/: app.py  main_window.py  overlay_widget.py  region_selector.py
src/translation/: engine.py
